--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,6 +75,7 @@
 
 * {
   box-sizing: border-box;
+  vertical-align: top;
   padding: 0;
   margin: 0;
 }
@@ -104,4 +105,8 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.flex {
+  display: flex;
 }
