--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,9 @@
     --text-color: rgb(255, 255, 255);
     --bg-color: #040308;
 
+    --breakpoint-lg: 1220px;
+    --breakpoing-sm: 740px;
+
 }
 
 * {
@@ -42,14 +45,12 @@ a {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-}
-@media screen and (max-width:1220px) {
-    .main-container {
+
+    @media screen and (max-width:var(--breakpoint-lg)) {
         width: 90%;
     }
-}
-@media screen and (max-width:740px) {
-    .main-container {
-        width: 94%;
+    @media screen and (max-width:var(--breakpoint-sm)) {
+            width: 94%;
     }
 }
+
