--- a/styles/charactersheet.scss
+++ b/styles/charactersheet.scss
@@ -93,15 +93,23 @@
         .radio-label {
             display: inline-block;
             text-align: right;
-            width: 45%;
+            width: 40%;
             margin-right: 1rem;
             padding-top: 0.05rem;
         }
         .radio-field {
-            cursor: pointer;
             display: inline-block;
-            width: 45%;
+            width: 55%;
             font-size: 1.3em;
+
+            > * {
+                cursor: pointer;
+            }
+            .reset {
+                display: inline-block;
+                margin-top: -0.15em;
+                margin-right: 0.4em;
+            }
         }
     }
     
