--- a/styles/charactersheet.scss
+++ b/styles/charactersheet.scss
@@ -3,6 +3,7 @@
     font-weight: bold;
     margin-top: 2vh;
     margin-bottom: 10vh;
+    font-size: 1.1em;
 
     h1 {
         text-transform: uppercase;
@@ -41,17 +42,21 @@
         margin: 0.75rem 0;
     }
 
-    .text-field, .number-field {
+    .text-field, .number-field, .select-field {
         display: inline-block;
         label {
             display: inline-block;
             padding: 0.2rem 0;
         }
-        input {
+        input, select {
             display: inline-block;
             margin: 0 2rem 0 0.5rem;
             padding: 0.2rem;
+            min-width: 12em;
         }
+    }
+    .number-field input {
+        width: 5em;
     }
 
     .textarea-field {
@@ -73,12 +78,12 @@
         width: 50%;
     }
 
-    input, textarea {
+    input, textarea, select {
       transition: border-color 0.3s linear;
       border-radius: 5px;
       border-color: rgba($color: #000000, $alpha: 0);
     }
-    input:focus, textarea:focus {
+    input:focus, textarea:focus, select:focus {
       outline: none !important;
       border-color: var(--highlight-color);
       transition: border-color 0.4s linear;
@@ -134,7 +139,27 @@
         header {
             cursor: pointer;
         }
-        
+    }
+
+    .ressources {
+        .radio-group {
+            display: flex;
+            .radio-label {
+                width: 20%;
+            }
+            .radio-field {
+                width: 20%;
+            }
+            .text-field {
+                width: 60%;
+                margin-top: 0;
+
+                input {
+                    width: 80%;
+                }
+            }
+
+        }
     }
     
     
