--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -54,3 +54,23 @@ a {
     }
 }
 
+h1 {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 2.5rem;
+    margin: 0 4rem 1rem;
+}
+h2 {
+    font-variant: small-caps;
+    border: 3px solid var(--main-color);
+    border-left: none;
+    border-right: none;
+    margin: 3rem auto 1rem;
+    letter-spacing: 2px;
+    font-size: 2rem;
+}
+h3 {
+    margin: 0 0 0.5rem;
+    font-size: 1.5rem;
+}
+
