--- a/styles/charactersheet.scss
+++ b/styles/charactersheet.scss
@@ -35,6 +35,7 @@
         }
     }
     .number-field input {
+        min-width: 5em;
         width: 5em;
     }
 
@@ -66,6 +67,18 @@
       outline: none !important;
       border-color: var(--highlight-color);
       transition: border-color 0.4s linear;
+    }
+
+    .lignee-container {
+        display: flex;
+        .select-field {
+            width: 30%;
+        }
+        .lignee-description {
+            width: 70%;
+            font-weight: normal;
+            margin: 0.5em 0 1em;;
+        }
     }
 
     .attributs {
