--- a/styles/fichePerso.scss
+++ b/styles/fichePerso.scss
@@ -32,6 +32,7 @@
             margin: 0 2rem 0 0.5rem;
             padding: 0.2rem;
             min-width: 12em;
+            background-color: white;
         }
     }
     .number-field input {
@@ -77,7 +78,11 @@
         .lignee-description {
             width: 70%;
             font-weight: normal;
-            margin: 0.5em 0 1em;;
+            margin: 0.5em 0 1em;
+
+            p {
+                margin-bottom: 0.4em;
+            }
         }
     }
 
