--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,11 +24,20 @@ html, body {
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
+    font-size: 1.2em;
+    padding-bottom: 3em;
+
+    @media screen and (max-width:var(--breakpoint-lg)) {
+        font-size: 1.1em;
+    }
+    @media screen and (max-width:var(--breakpoint-sm)) {
+        font-size: 1em;
+    }
 }
 
 a {
     color: inherit;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 .flex {
@@ -76,3 +85,9 @@ h3 {
     font-size: 1.5rem;
 }
 
+
+.arrow {
+    font-size: 0.6em;
+    display: inline-block;
+    padding-top: 0.6em;;
+}
