--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -56,6 +56,8 @@ a {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 2vh;
+    margin-bottom: 8vh;
 
     @media screen and (max-width:var(--breakpoint-lg)) {
         width: 90%;
@@ -84,10 +86,55 @@ h3 {
     margin: 0 0 0.5rem;
     font-size: 1.5rem;
 }
-
+p {
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
+}
 
 .arrow {
     font-size: 0.6em;
     display: inline-block;
     padding-top: 0.6em;;
+}
+
+.title-bloc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    .title-line {
+        height: 3px;
+        width: 100%;
+        background-color: var(--main-color);
+    }
+}
+
+.btn-lg {
+    display: block;
+    border: 6px solid var(--main-color);
+    width: 600px;
+    padding: 1em;
+    font-size: 1.4em;
+    text-decoration: none;
+    font-variant: small-caps;
+    max-width: 100%;
+    text-align: center;
+    margin: 1em auto;
+
+    transition: all 0.6s;
+
+    &:hover {
+        background-color: var(--main-color);
+        border-color: black;
+    }
+}
+
+.index {
+    text-align: center;
+
+    .title-bloc {
+        .title-line {
+            width: 100%;
+        }
+    }
 }
