Replacing with html entities

--- a/styles/fichePerso.scss
+++ b/styles/fichePerso.scss
@@ -138,6 +138,9 @@
                 width: 60%;
                 margin-top: 0;
 
+                label {
+                    font-weight: normal;
+                }
                 input {
                     width: 80%;
                 }
