Trying to make the ORM work

--- a/styles/fichePerso.scss
+++ b/styles/fichePerso.scss
@@ -149,5 +149,23 @@
         }
     }
     
+    #save {
+        position: fixed;
+        bottom: 2vh;
+        right: 5vw;
+        background-color: var(--highlight-color);
+        border: 1px solid var(--main-color);
+        color: white;
+        font-size: 1rem;
+        padding: 0.6em 1em;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: all 0.3s;
+
+        &:hover {
+            -webkit-filter: brightness(70%);
+            filter: brightness(70%);
+        }
+    }
     
 }
