--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -53,6 +53,7 @@ a {
 }
 
 .main-container {
+    text-align: center;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -106,6 +107,23 @@ p {
         height: 3px;
         width: 100%;
         background-color: var(--main-color);
+    }
+}
+
+.btn-md {
+    background-color: var(--highlight-color);
+    border: 1px solid var(--main-color);
+    color: white;
+    font-size: 1rem;
+    padding: 0.6em 1em;
+    margin: 0.75rem 0;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s;
+
+    &:hover {
+        -webkit-filter: brightness(70%);
+        filter: brightness(70%);
     }
 }
 
