--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,7 +25,7 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     font-size: 1.2em;
-    padding-bottom: 3em;
+    padding-bottom: 6em;
 
     @media screen and (max-width:var(--breakpoint-lg)) {
         font-size: 1.1em;
@@ -153,6 +153,31 @@ p {
     .title-bloc {
         .title-line {
             width: 100%;
+        }
+    }
+}
+
+.main-navbar {
+    width: 100vw;
+    background-color: var(--main-color);
+    position: fixed;
+    bottom: 0;
+
+    ul {
+        list-style: none;
+        margin: 0;
+        display: flex;
+        justify-content: space-around;
+
+        li a {
+            display: inline-block;
+            text-decoration: none;
+            padding: 1em 2em;
+            transition: all 0.6s;
+
+            &:hover {
+                background-color: var(--bg-color);
+            }
         }
     }
 }
