Navbar & game rules

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -91,6 +91,9 @@ p {
     margin-top: 0.3em;
     margin-bottom: 0.3em;
 }
+ul {
+    list-style-position: inside;
+}
 
 .arrow {
     font-size: 0.6em;
