--- a/styles/fichePerso.scss
+++ b/styles/fichePerso.scss
@@ -72,7 +72,7 @@
     
     #save {
         position: fixed;
-        bottom: 2vh;
+        bottom: calc(3vh + 3em);
         right: 5vw;
     }
     
