Creating empty character on sign up

--- a/styles/fichePerso.scss
+++ b/styles/fichePerso.scss
@@ -69,6 +69,12 @@
 
         }
     }
+
+    .disclaimer {
+        font-weight: normal;
+        opacity: 0.7;
+        font-style: italic;
+    }
     
     #save {
         position: fixed;
