--- a/styles/lignees.scss
+++ b/styles/lignees.scss
@@ -9,6 +9,7 @@
         margin-bottom: 0.4em;
     }
     .columns > * {
-        padding-right: 1em;
+        padding-right: 0.5em;
+        padding-left: 0.5em;
     }
 }
