--- a/styles/des.scss
+++ b/styles/des.scss
@@ -10,8 +10,8 @@
 
     .button-des {
         width: 100%;
-        padding: 0.75em;
-        margin: 0.75em 0;
+        padding: 0.5em;
+        margin: 0.5em 0;
         background-color: #c0b9d4;
         border: 1px solid #867699;
         border-radius: 5px;
@@ -29,5 +29,13 @@
                 background-color: #698fbb;
             }
         }
+    }
+
+    .recapitulatif {
+        position: fixed;
+        bottom: 2.66em;
+        left: 0;
+        background-color: rgb(49, 49, 49);
+        width: 100vw;
     }
 }
