Affichage Soif et Humanité

--- a/styles/fichePerso.scss
+++ b/styles/fichePerso.scss
@@ -31,6 +31,10 @@
                 margin-right: 0.5em;
             }
         }
+
+        .columns + .columns {
+            margin-top: 1em;
+        }
     }
 
     .discipline {
