--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -63,11 +63,11 @@ a {
     margin-top: 2vh;
     margin-bottom: 8vh;
 
-    @media screen and (max-width:var(--breakpoint-lg)) {
+    @media screen and (max-width:var($breakpoint-lg)) {
         width: 90%;
     }
-    @media screen and (max-width:var(--breakpoint-sm)) {
-        width: 94%;
+    @media screen and (max-width:var($breakpoint-sm)) {
+        width: 96%;
     }
 }
 
@@ -174,12 +174,18 @@ ul {
         margin: 0;
         display: flex;
         justify-content: space-around;
+        max-width: 100vh;
 
         li a {
             display: inline-block;
             text-decoration: none;
             padding: 0.75em 2em;
             transition: all 0.6s;
+
+            @media screen and (max-width:var($breakpoint-sm)) {
+                padding: 0.75em 0.75em;
+                font-size: 0.9rem;
+            }
 
             &:hover {
                 background-color: var(--bg-color);
