--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -63,10 +63,10 @@ a {
     margin-top: 2vh;
     margin-bottom: 8vh;
 
-    @media screen and (max-width:var($breakpoint-lg)) {
+    @media screen and (max-width: $breakpoint-lg) {
         width: 90%;
     }
-    @media screen and (max-width:var($breakpoint-sm)) {
+    @media screen and (max-width: $breakpoint-sm) {
         width: 96%;
     }
 }
@@ -182,7 +182,7 @@ ul {
             padding: 0.75em 2em;
             transition: all 0.6s;
 
-            @media screen and (max-width:var($breakpoint-sm)) {
+            @media screen and (max-width: $breakpoint-sm) {
                 padding: 0.75em 0.75em;
                 font-size: 0.9rem;
             }
