Navbar CSS correction

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -174,7 +174,7 @@ ul {
         margin: 0;
         display: flex;
         justify-content: space-around;
-        max-width: 100vh;
+        max-width: 100%;
 
         li a {
             display: inline-block;
