--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,15 +27,8 @@ html, body {
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
-    font-size: 1.2em;
+    font-size: 1.2rem;
     padding-bottom: 6em;
-
-    @media screen and (max-width: $breakpoint-lg) {
-        font-size: 1.1em;
-    }
-    @media screen and (max-width: $breakpoint-sm) {
-        font-size: 1em;
-    }
 }
 
 a {
@@ -76,6 +69,10 @@ h1 {
     letter-spacing: 1px;
     font-size: 2.5rem;
     margin: 0 4rem 1rem;
+    
+    @media screen and (max-width: $breakpoint-sm) {
+        margin: 0 2rem 1rem;
+    }
 }
 h2 {
     font-variant: small-caps;
@@ -92,7 +89,12 @@ h3 {
 }
 p {
     margin-top: 0.3em;
-    margin-bottom: 0.3em;
+    margin-bottom: 0.6em;
+    
+    @media screen and (max-width: $breakpoint-sm) {
+        max-width: 90vw;
+        margin: 0.3em auto 0.6em;
+    }
 }
 ul {
     list-style-position: inside;
@@ -101,7 +103,7 @@ ul {
 .arrow {
     font-size: 0.6em;
     display: inline-block;
-    padding-top: 0.6em;;
+    padding-top: 0.6em;
 }
 
 .title-bloc {
