--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -196,3 +196,11 @@ ul {
         }
     }
 }
+
+.check-field {
+    input {
+        margin-top: 0.3em;
+        margin-right: 0.3em;
+        display: inline-block;
+    }  
+}
